2004-10-18  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/type_manips.h: replace template <> by macro.

	* stlport/stl/debug/_debug.h, _debug.c: __check_if_not_owner should return true
	in case of incompatible types and do check different from __check_if_owner;
	added message for check __check_if_not_owner.

	* test/unit/mvctor_test.cpp, test/unit/ptrspec_test.cpp: fix tests to satisfy
	changes related to 23.1.1 Table 67 in stlport/stl/debug/_vector.h, _deque.h---see
	record 2004-10-14 below.

2004-10-14  Francois Dumont  <dums@stlport...>

	* stlport/stl/debug/_iterator.h: Move of some _DBG_iter_base and _DBG_iter
	methods implementation outside struct definition to fix call on incomplete 
	type compile error generated by the call to the _Incrementable or _Dereferenceable
	functions passing *this as input parameter thanks Alexey Sarytchev
	
	* test/unit/sstream_test.cpp, fstream_test.cpp: Fix of the tests on streambuf 
	throwing exception for platform with no exception support.

	* stl/_string.h: Add of the missing compare methods on the basic_string 
	implementation used by compilers supporting template methods thanks Patrick
	Bennett report.

	* stlport/stl/debug/_vector.h, _deque.h: Add check on the insert range method, 
	the inserted can not be pointing to the this instance where the insertion occur.


2004-10-13  Petr Ovtchenkov  <ptr@island...>

	* src/explore/Makefiles/gmake: a bit correction of compiled and installed names
	of executables on *nix systems, see record 2004-09-29 by Francois.

2004-10-12  Francois Dumont  <dums@stlport...>

	* stlport/stl/_config.h: typo fix thanks KL
	
	* stlport/stl/_move_construct_fwk.h, _set.h, _map.h, _hash_set.h, _hash_map.h:
	Extra semicolons removal thanks Wlodek Szafran reports.

2004-10-11  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_rope.h: add typename.

2004-10-08  Francois Dumont  <dums@stlport...>

	* stlport/stl/_deque.h, _hashtable.h, _tree.h, _bvector.h: Specialization of the